# miniaudio

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: miniaudio.podspec  miniaudio_decoder.podspec
ios/Classes/: MiniaudioDecoderPlugin.h  MiniaudioDecoderPlugin.m  MiniaudioPlugin.h  MiniaudioPlugin.m  SwiftMiniaudioDecoderPlugin.swift  SwiftMiniaudioPlugin.swift
lib/: miniaudio.dart  miniaudio_decoder.dart
lib/src/: miniaudio.dart  miniaudio_decode.dart  miniaudio_device.dart  miniaudio_ffi.dart  miniaudio_ringbuffer.dart  utils.dart
linux/: CMakeLists.txt  miniaudio_plugin.cc
linux/include/miniaudio/: miniaudio_plugin.h
macos/: libminiaudio.dylib  miniaudio.podspec
macos/Classes/: MiniaudioPlugin.swift
src/: CMakeLists.txt  miniaudio.c
test/: miniaudio_decoder_test.dart  miniaudio_test.dart
windows/: CMakeLists.txt  miniaudio_plugin.cpp
windows/include/miniaudio/: miniaudio_plugin.h
(+8 files in other folders)
