cmake_minimum_required(VERSION 3.4)

project(miniaudio C)
set(COMMON_DEFS MA_ENABLE_ONLY_SPECIFIC_BACKENDS MA_NO_ENCODING MA_NO_DEVICE_IO MA_NO_GENERATION MA_NO_THREADING)
set(CMAKE_BUILD_TYPE "RELEASE")
add_library(miniaudio SHARED miniaudio.c)
target_compile_definitions(miniaudio PRIVATE ${COMMON_DEFS})
set(PROJECT_ROOT ${CMAKE_SOURCE_DIR}/..)
if(APPLE)
    install(TARGETS miniaudio DESTINATION ${PROJECT_ROOT}/macos/)
endif()
if(NOT APPLE AND UNIX) # Linux?
    install(TARGETS miniaudio DESTINATION ${PROJECT_ROOT}/linux/)
endif()
if(WIN32)
    install(TARGETS miniaudio DESTINATION ${PROJECT_ROOT}/windows/)
endif()
